Start of the new code
I created the character java (doesn't load a character yet since it is not on the main view) Started to make a button work to take me to GameView. Added the background image for GameView, added the Sprite sheet for the Character and Background of the game view.

--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -18,7 +18,7 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="32dp"
-            android:text="Forest of Madness!"
+            android:text="Forest of Madness"
             android:textColor="#FFFFFF"
             android:textSize="25sp"
             app:layout_constraintEnd_toEndOf="parent"
