--- a/app/src/main/res/layout/activity_game_view.xml
+++ b/app/src/main/res/layout/activity_game_view.xml
@@ -33,7 +33,7 @@
             android:text="Right" />
 
         <TextView
-            android:id="@+id/score"
+            android:id="@+id/playerScore"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
