--- a/app/src/main/res/layout/activity_game_view.xml
+++ b/app/src/main/res/layout/activity_game_view.xml
@@ -20,7 +20,9 @@
             android:layout_alignParentStart="true"
             android:layout_marginBottom="39dp"
             android:layout_marginStart="31dp"
-            android:text="Left" />
+            android:text="Left"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="31dp" />
 
         <Button
             android:id="@+id/mRight"
@@ -29,8 +31,10 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignTop="@+id/mLeft"
-            android:layout_marginEnd="31dp"
-            android:text="Right" />
+            android:layout_marginEnd="32dp"
+            android:text="Right"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="32dp" />
 
         <TextView
             android:id="@+id/playerScore"
@@ -41,7 +45,9 @@
             android:layout_marginStart="12dp"
             android:layout_marginTop="16dp"
             android:text="Score: 999"
-            android:textSize="24sp" />
+            android:textSize="24sp"
+            android:layout_marginLeft="12dp"
+            android:layout_alignParentLeft="true" />
     </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
